Creación de header (Mobile). v.1

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Markefy</title>
+    <!-- Insertar bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <!--     Llamar hoja de estilos principal -->
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
-    <div style="background-color: aqua;"> esto es una prueba del div</div>
+    <header> 
+        <img class='icono' src="./img/menu-button-modificado.png">
+        <div id='texto-cabecera' class='pad-L-2 pad-R-2'>Comprar por categoría </div>
+        <div id='iconos-header' class='float-derecha'>
+            <img class='icono pad-L-2' src="./img/lupa-buscar.png">
+            <img class='icono pad-L-2' src='./img/carrito-modificado.png'> 
+        </div>
+        
+        
+    </header>
+    <section id="imagenes-pasarela"></section>
+    <section id="categorias"></section>
 </body>
 </html>
