--- a/site/public/index.html
+++ b/site/public/index.html
@@ -29,16 +29,10 @@
             <div id="header-bottom">
                 <!--Inicio <barraBuscar> -->
                     <!-- https://webdesign.tutsplus.com/es/tutorials/css-experiments-with-a-search-form-input-and-button--cms-22069 -->
-               <!--      <div class="box">
-                        <div class="container-1">
-                            <span class="icon"><img class="icono-pequeno" src="./img/search-icon.svg"></span>
-                            <input type="search" id="search" placeholder="Search..." />
-                        </div>
-                    </div> -->
                     <div class="box">
                         <div class="container-buscador">
                             <input type="search" id="search" placeholder="Escriba lo que desea buscar..." />
-                            <span class="icon"><img class="icono-pequeno" src="./img/search-icon.svg"></span>
+                            <div class="icon"><img class="icono-pequeno" src="./img/search-icon.svg"></div>
                         </div>
                     </div>
                 <!--Fin </barraBuscar> -->
