--- a/site/public/index.html
+++ b/site/public/index.html
@@ -10,36 +10,101 @@
 </head>
 <body>
     <header>
-        <div class="header-container">
-            <div class="header-top">
+        <div id="container-header">
+            <div id="header-top">
                 <div id="menu" class="centrar-hijos-vertical-horizontal"><img class="icono" src="./img/menu-icon.svg"></div>
-                <div><span id="logo">Marketfy</span></div>
-                <div id="perfil">
+                <div id="espacio-logo"><span id="logo">Marketfy</span></div>
+                <div id="carrito">
+                    <div class="total-carrito"> $120.322</div>
+                    <div>
+                        <img class="icono" src="./img/shoppingcart-icon.svg">
+                    </div>
                     <div class="circulo-rojo centrar-hijos-vertical-horizontal">
                         <div class="inline-block blanco-negrita">22</div>
-                    </div>
-                    <div>
-                        <img class="icono" src="./img/user-icon.svg">
                     </div>
                 </div>
             </div>
             <div id="categorias">
-                <div class="cuadrado"></div>
+                <div class="categorias">
+<!--                     <div class="imagen-categoria">
+
+                    </div>
+                    <div class="texto-categoria">
+
+                    </div> -->
+                    <div class="categoria">
+                        <div class="imagen-categoria">
+                            <img src="img/groceries.png">
+                        </div>
+                        <div class="nombre-categoria">
+                            <span id="categoria1">Almacen</span>
+                        </div>
+                    </div>
+                    <div class="categoria">
+                        <div class="imagen-categoria">
+                            <img src="img/groceries.png">
+                        </div>
+                        <div class="nombre-categoria">
+                            <span id="categoria1">Congelados</span>
+                        </div>
+                    </div>
+                    <div class="categoria">
+                        <div class="imagen-categoria">
+                            <img src="img/groceries.png">
+                        </div>
+                        <div class="nombre-categoria">
+                            <span id="categoria1">Almacen</span>
+                        </div>
+                    </div>
+                    <div class="categoria">
+                        <div class="imagen-categoria">
+                            <img src="img/groceries.png">
+                        </div>
+                        <div class="nombre-categoria">
+                            <span id="categoria1">Almacen</span>
+                        </div>
+                    </div>
+                    <div class="categoria">
+                        <div class="imagen-categoria">
+                            <img src="img/groceries.png">
+                        </div>
+                        <div class="nombre-categoria">
+                            <span id="categoria1">Almacen</span>
+                        </div>
+                    </div>
+                    <div class="categoria">
+                        <div class="imagen-categoria">
+                            <img src="img/groceries.png">
+                        </div>
+                        <div class="nombre-categoria">
+                            <span id="categoria1">Almacen</span>
+                        </div>
+                    </div>
+
+
+                </div>
+
             </div>
             <div id="header-bottom">
                 <!--Inicio <barraBuscar> -->
-                    <!-- https://webdesign.tutsplus.com/es/tutorials/css-experiments-with-a-search-form-input-and-button--cms-22069 -->
-                    <div class="box">
-                        <div class="container-buscador">
-                            <input type="search" id="search" placeholder="Escriba lo que desea buscar..." />
-                            <div class="icon"><img class="icono-pequeno" src="./img/search-icon.svg"></div>
-                        </div>
+                    <div class="buscador">
+                            <input type="text">
+                        <div class="icono">🔎</div>
                     </div>
                 <!--Fin </barraBuscar> -->
             </div>
         </div>
     </header>
-    <content>b</content>
+    <content>
+        <div class="home-showroom">
+            <div class="showroom-titulo">Ofertas</div>
+            <div class="showroom-vertodo">Ver todo</div>
+            <div class="showroom-contenedor-miniaturas">
+                <div class="miniatura cuadrado"></div>
+            </div>
+
+        </div>
+    </content>
     <barra-flotante>c</barra-flotante>
 </body>
 </html>
