--- a/site/public/index.html
+++ b/site/public/index.html
@@ -96,9 +96,12 @@
         </div>
     </header>
     <content>
-        <div class="home-showroom">
-            <div class="showroom-titulo">Ofertas</div>
-            <div class="showroom-vertodo">Ver todo</div>
+        <div id="home-showroom">
+            <div id="showroom-header">
+                <div class="showroom-titulo">Ofertas</div>
+                <div class="showroom-vertodo">Ver todo</div>
+            </div>
+
             <div class="showroom-contenedor-miniaturas">
                 <div class="miniatura cuadrado"></div>
             </div>
