--- a/site/public/index.html
+++ b/site/public/index.html
@@ -96,14 +96,25 @@
         </div>
     </header>
     <content>
-        <div id="home-showroom">
-            <div id="showroom-header">
-                <div class="showroom-titulo">Ofertas</div>
-                <div class="showroom-vertodo">Ver todo</div>
+        <div id="home-catalogo">
+            <div class="catalogo-header">
+                <div class="catalogo-header-titulo">Ofertas</div>
+                <div class="catalogo-header-vertodo">Ver todo ></div>
             </div>
-
-            <div class="showroom-contenedor-miniaturas">
-                <div class="miniatura cuadrado"></div>
+            <div class="catalogo-contenedor">
+                <div class="producto-contenedor">
+                    <div class="producto-header">
+                        <div class="producto-descuento">-5%
+                        </div>
+                        <div class="producto-favorito">&#9829
+                        </div>
+                    </div>
+                    <div class="producto-imagen">
+                        <img src="img/salsa-tomate-la-campañola.png">
+                    </div>
+                    <div class="minuatura-content"> content</div>
+                    <div class="miniatura-bottom"> bottom</div>
+                </div>
             </div>
 
         </div>
