--- a/site/public/index.html
+++ b/site/public/index.html
@@ -112,13 +112,79 @@
                     <div class="producto-imagen">
                         <img src="img/salsa-tomate-la-campañola.png">
                     </div>
-                    <div class="minuatura-content"> content</div>
-                    <div class="miniatura-bottom"> bottom</div>
+                    <div class="producto-footer">
+                        <p class="producto-detalle"> Atún la campañola entero </p>
+                        <p class="producto-presentacion"> x500gr </p>
+                    </div>
+                <div class="producto-precios">
+                    <p class="precio-nuestro">$6.800</p>
+                    <p class="precio-competencia">$9.500</p>
+                </div>
+                    <div class="producto-agregar">Agregar</div>
+                </div>
+                <div class="producto-contenedor">
+                    <div class="producto-header">
+                        <div class="producto-descuento">-5%
+                        </div>
+                        <div class="producto-favorito">&#9829
+                        </div>
+                    </div>
+                    <div class="producto-imagen">
+                        <img src="img/salsa-tomate-la-campañola.png">
+                    </div>
+                    <div class="producto-footer">
+                        <p class="producto-detalle"> Atún la campañola entero </p>
+                        <p class="producto-presentacion"> x500gr </p>
+                    </div>
+                <div class="producto-precios">
+                    <p class="precio-nuestro">$6.800</p>
+                    <p class="precio-competencia">$95,00</p>
+                </div>
+                    <div class="producto-agregar">Agregar</div>
+                </div>
+                <div class="producto-contenedor">
+                    <div class="producto-header">
+                        <div class="producto-descuento">-5%
+                        </div>
+                        <div class="producto-favorito">&#9829
+                        </div>
+                    </div>
+                    <div class="producto-imagen">
+                        <img src="img/salsa-tomate-la-campañola.png">
+                    </div>
+                    <div class="producto-footer">
+                        <p class="producto-detalle"> Atún la campañola entero </p>
+                        <p class="producto-presentacion"> x500gr </p>
+                    </div>
+                <div class="producto-precios">
+                    <p class="precio-nuestro">$6.800</p>
+                    <p class="precio-competencia">$95,00</p>
+                </div>
+                    <div class="producto-agregar">Agregar</div>
+                </div>
+                <div class="producto-contenedor">
+                    <div class="producto-header">
+                        <div class="producto-descuento">-5%
+                        </div>
+                        <div class="producto-favorito">&#9829
+                        </div>
+                    </div>
+                    <div class="producto-imagen">
+                        <img src="img/salsa-tomate-la-campañola.png">
+                    </div>
+                    <div class="producto-footer">
+                        <p class="producto-detalle"> Atún la campañola entero </p>
+                        <p class="producto-presentacion"> x500gr </p>
+                    </div>
+                <div class="producto-precios">
+                    <p class="precio-nuestro">$6.800</p>
+                    <p class="precio-competencia">$95,00</p>
+                </div>
+                    <div class="producto-agregar">Agregar</div>
                 </div>
             </div>
 
         </div>
     </content>
-    <barra-flotante>c</barra-flotante>
 </body>
 </html>
